# hkd-playground

./: .gitignore  App.hs  Business.hs  CHANGELOG.md  Main.hs  Validation.hs  default.nix  hkd-playground.cabal
nix/: nixpkgs-unstable.nix
src/: App.hs  Business.hs
test/: Main.hs
