cabal-version:      2.4
name:               hkd-playground
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Kirill Valyavin
maintainer:         kvalyavin@ya.ru

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

executable hkd-playground
    main-is:          Main.hs

    other-modules:  App
                  , Validation
                  , Business
    default-extensions: DeriveGeneric
                      , DerivingStrategies
                      , DerivingVia
                      , FlexibleContexts
                      , FlexibleInstances
                      , GeneralizedNewtypeDeriving
                      , GADTs
                      , DataKinds
                      , InstanceSigs
                      , MultiParamTypeClasses
                      , FunctionalDependencies
                      , RankNTypes
                      , ScopedTypeVariables
                      , StandaloneDeriving
                      , TemplateHaskell
                      , QuasiQuotes
                      , TypeApplications
                      , TypeFamilies
                      , UndecidableInstances
                      , PatternSynonyms
                      , PolyKinds

    build-depends:    base
                    , barbies
                    , barbies-th
                    , validationt
                    , lens
                    , hashtables
                    , hashable
                    , mtl
                    , pretty-simple

    ghc-options:      -Wall
    default-language: Haskell2010
    
