cabal-version:      2.4
name:               hkd-playground
version:            0.1.0.0
synopsis:

-- A longer description of the package.
-- description:
homepage:

-- A URL where users can report bugs.
-- bug-reports:
license:            NONE
author:             Kirill Valyavin
maintainer:         kvalyavin@ya.ru

-- A copyright notice.
-- copyright:
-- category:
extra-source-files: CHANGELOG.md

library
   exposed-modules: App
                  , Validation
                  , Business
   hs-source-dirs: src
   default-extensions: DataKinds
                     , DerivingStrategies
                     , DerivingVia
                     , FlexibleContexts
                     , FlexibleInstances
                     , GeneralizedNewtypeDeriving
                     , MultiParamTypeClasses
                     , FunctionalDependencies
                     , ScopedTypeVariables
                     , StandaloneDeriving
                     , TemplateHaskell
                     , TypeApplications
                     , TypeFamilies
                     , UndecidableInstances
   build-depends: base
                , barbies
                , barbies-th
                , validationt
                , lens
                , hashtables
                , hashable
                , mtl
                    
executable hkd-playground
    main-is:          Main.hs

    build-depends:    base
                    , hkd-playground
                    , pretty-simple

    ghc-options:      -Wall
    default-language: Haskell2010
    
test-suite test
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:    base
                    , tasty
                    , tasty-hunit
                    , hkd-playground
                                                   